--- a/styles.css
+++ b/styles.css
@@ -135,27 +135,71 @@ h4 { /*can be replaced by a subheading class. ask for best practices before push
 
 .contact__wrapper {
   overflow: hidden;
-  position: fixed;
   z-index: 10;
-  bottom: -13em;
-  left: 50%;
   border-radius: 50%;
-  margin-left: -13em;
-  transform: scale(1);
-  transition: all .3s ease;
 }
 
-.contact__overlay {
+.contact__wrapper li {
+  position: absolute;
+  transform-origin: 100% 100%;
+  left: 50%;
+  right:50%;
+}
+
+.contact__wrapper li a {
+  display: block;
+  height: 14.5em;
+  width: 14.5em;
+  border-radius: 50%;
+  color: #ffffff;
+  padding-top: 1.8em;
+  text-align: center;
+  transform: skew(-50deg) rotate(-40deg) scale(1);
+}
+
+.contact__wrapper li a span {
+  font-size: 1.1em;
+  opacity: 0.7;
+}
+
+.contact__wrapper li:first-child {
+  transform: rotate(-10deg) skew(50deg);
+}
+
+.contact__wrapper li:nth-child(2) {
+  transform: rotate(30deg) skew(50deg);
+}
+
+.contact__wrapper li:nth-child(3) {
+  transform: rotate(70deg) skew(50deg);
+}
+
+.contact__wrapper li:nth-child(even) {
+  background-color: #a61414;
+}
+
+.contact__wrapper li:nth-child(odd) {
+  background-color: #765050;
+}
+
+/*a:focus could make for some cool visual effects*/
+
+.contact__wrapper li:not(.active) a:hover, .contact__wrapper li:not(.active) a:active {
+ background-color: hsla(0, 88%, 70%, 1);
+}
+
+
+
+/*.contact__overlay {
   width: 100%;
   height: 100%;
-  position: fixed;
   top: 0;
   left: 0;
   bottom: 0;
   right: 0;
   z-index: 2;
   pointer-events: auto;
-}
+}*/
 
 @media screen and (max-width:960px){ /*adjusted from 480 for testing. might wanna make a new mode for 360*/
   .about-card {
