--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -16,6 +17,7 @@
 
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
  
 @font-face {
@@ -24,6 +26,7 @@
   
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +35,7 @@
   
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 /*there are like 10 more font-faces that are avaible. delete any that are not used before adding to the bucket.*/
@@ -92,6 +96,7 @@ h4 { /*can be replaced by a subheading class. ask for best practices before push
 }
 
 .about-card__image img {
+  margin-top: 4em;
   object-fit: contain;
   max-width: 100%;
   border: .6em solid #794e0d;
@@ -120,7 +125,7 @@ h4 { /*can be replaced by a subheading class. ask for best practices before push
 .projects__cards {
   background-color: #EEB359; 
   text-align: center;
-  margin: 2em 7em;
+  margin: 4em 7em;
   padding: 14em 2em;
 
   color: #E1E1E6;
@@ -188,8 +193,6 @@ h4 { /*can be replaced by a subheading class. ask for best practices before push
  background-color: hsla(0, 88%, 70%, 1);
 }
 
-
-
 /*.contact__overlay {
   width: 100%;
   height: 100%;
@@ -202,11 +205,11 @@ h4 { /*can be replaced by a subheading class. ask for best practices before push
 }*/
 
 @media screen and (max-width:960px){ /*adjusted from 480 for testing. might wanna make a new mode for 360*/
+
   .about-card {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    align-items: center;
 
     background-color: #ffd9a1;
     border-radius: 2em;
@@ -221,6 +224,7 @@ h4 { /*can be replaced by a subheading class. ask for best practices before push
 
   .about-card__image {
     order:1;
+    margin-top: 0%!important; 
     margin-bottom: 5%;
     max-width: 16em;
     max-height: 16em;
@@ -232,4 +236,10 @@ h4 { /*can be replaced by a subheading class. ask for best practices before push
 
     margin: 5% 2.5%;
   }
+  }
+
+  @media screen and (max-width:720px){
+    body {
+      margin-right: -80%;
+    }
   }
