--- a/styles.css
+++ b/styles.css
@@ -410,7 +410,7 @@ h4 {
 
   .projects__card {
     max-width: 80%;
-
+    overflow: hidden;
     .links {
       height: 2em;
       align-content: center;
